add: css for full menu overlay

--- a/index.html
+++ b/index.html
@@ -7,7 +7,87 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="main-container"></div>
+    <!-- Header Navigation -->
+    <header>
+      <nav class="navbar">
+        <div class="nav-menu-toggle"><p>Menu</p></div>
+        <div class="nav-item"><p>Resume</p></div>
+      </nav>
+    </header>
+
+    <!-- Menu Overlay (hidden until toggled) -->
+    <div class="menu-overlay">
+      <div class="menu-content">
+        <div class="menu-col">
+          <p>Codegrid</p>
+          <p>Shoreline Drive</p>
+          <p>Oslo</p>
+          <br />
+          <p>Contact</p>
+          <p>hello@pushkar.com</p>
+          <br />
+          <p>Direct</p>
+          <p>+91 8600004826</p>
+        </div>
+        <div class="menu-col">
+          <p>Instagram</p>
+          <p>Are.na</p>
+          <p>Vimeo</p>
+          <br />
+          <p>Language</p>
+          <p>Sanskrit</p>
+          <br />
+          <p>Credits</p>
+          <p>Imprints</p>
+          <p>Ref. 00492X</p>
+        </div>
+      </div>
+
+      <div class="menu-logo">
+        <div>P10.</div>
+      </div>
+
+      <div class="menu-links-wrapper">
+        <div class="menu-links">
+          <a href="#">
+            <span>Index</span>
+            <span>Index</span>
+          </a>
+        </div>
+        <div class="menu-links">
+          <a href="#">
+            <span>Persona</span>
+            <span>Persona</span>
+          </a>
+        </div>
+        <div class="menu-links">
+          <a href="#">
+            <span>Biography</span>
+            <span>Biography</span>
+          </a>
+        </div>
+        <div class="menu-links">
+          <a href="#">
+            <span>Work</span>
+            <span>Work</span>
+          </a>
+        </div>
+        <div class="menu-links">
+          <a href="#">
+            <span>Journal</span>
+            <span>Journal</span>
+          </a>
+        </div>
+
+        <div class="link-highlighter"></div>
+      </div>
+    </div>
+
+    <div class="main-container">
+      <section class="hero">
+        <h1>Shaping Ideas</h1>
+      </section>
+    </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
       integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
